--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dental-react-landing",
+  "name": "cafe-react-landing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,5 +30,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "classnames": "2.2.6",
+    "prettier": "2.1.2",
+    "sass": "1.26.12"
   }
 }
